# scriptvedit

./: .coverage  .gitattributes  .gitignore  ASSETS.md  CLAUDE.md  LICENSE  README.md  Report_for_ChatGPT.txt  baseline_snapshots.json  bg.py  main.py  morph.py  onigiri.py  pyproject.toml  scriptvedit.py  svbeat.py  svinspect.py  svtestkit.py  svtts.py  tools_baseline.py  upload_to_server.py
.github/workflows/: ci.yml
docs/: production_guide.md
examples/basic/: badge.py  bg.py  main.py  onigiri.py
examples/showcase/: README.md  render_sample.py  render_showcase.py  sample_badge.py  sample_bg.py  sample_bgm.py  sample_cafe.py  sample_figure.py  sample_onigiri.py  showcase_bgm.py  showcase_generate.py  showcase_morph.py  showcase_objects.py  showcase_slides.py  showcase_watermark.py
plugins/: example_neon.py  example_photo_frame.py  example_scanline.py
sample/: render_sample.py  render_showcase.py  showcase_bgm.py  showcase_generate.py  showcase_morph.py  showcase_objects.py  showcase_slides.py  showcase_watermark.py
scripts/: gen_mask_assets.py  generate_test_assets.py  scan_bgm.py  tools_baseline.py  upload_to_server.py
src/scriptvedit/: __init__.py  __main__.py  assets.py  audio.py  audit.py  beat.py  cache.py  cli.py  ease.py  easing.py  effects.py  expr.py  ffmpeg.py  formula.py  gui.py  manifest.py  media.py  morph.py  objects.py  plugins.py  project.py  renderer.py  scaffold.py  serde.py  state.py  testkit.py  text.py  timeline.py  tts.py  validate.py  viz.py  web.py
templates/: diagram_svg.html  subtitle_box.html
test/: gen_mask_assets.py  render_all.py  test01_bg.py  test01_main.py  test01_oni.py  test02_cafe.py  test02_main.py  test02_maku.py  test03_bg.py  test03_main.py  test03_oni.py  test03_virus.py  test04_cache_layer.py  test04_maku.py  test05_bg.py  test05_main.py  test05_pop.py  test06_main.py  test06_oni.py  test07_cafe.py  test07_oni.py  test07_virus.py  test08_bg.py  test08_main.py  test08_pop.py  test09_cafe.py  test09_main.py  test09_oni.py  test09_pop.py  test09_virus.py  test10_cache_layer.py  test10_main.py  test10_maku.py  test11_main.py  test11_maku.py  test11_oni.py  test12_lambda_move.py  test12_lambda_scale.py  test12_sin_fade.py  test13_percent.py  (+63 more)
test/snapshots/: test01.json  test02.json  test03.json  test04.json  test05.json  test06.json  test07.json  test08.json  test09.json  test10.json  test11.json  test12.json  test13.json  test14.json  test15.json  test16.json  test17.json  test18.json  test19.json  test20.json  test21.json  test22.json  test23.json  test24.json  test25.json  test26.json  test27.json  test28.json  test29.json  test30.json  test31.json  test32.json  test33.json  test34.json  test35.json  test36.json  test37.json  test38.json  test39.json  test40.json  (+50 more)
tests/: conftest.py  render_all.py  sample.py  test_assets.py  test_audit.py  test_audit_infra.py  test_audit_p0.py  test_dsl_sugar.py  test_errors.py  test_extras.py  test_font_resolve.py  test_issue10.py  test_issue11.py  test_issue13_beat.py  test_issue13_diagram.py  test_issue13_length_compute.py  test_issue13_sequence.py  test_issue13_tts.py  test_issue13_validation.py  test_issue14.py  test_issue15.py  test_issue17_docs.py  test_issue17_showcase.py  test_issue8.py  test_new_project.py  test_real_browser.py  test_renderer.py  test_robustness.py  test_snapshot.py  test_testkit.py
tests/layers/: test01_bg.py  test01_oni.py  test02_cafe.py  test02_maku.py  test03_bg.py  test03_oni.py  test03_virus.py  test04_cache_layer.py  test04_main.py  test04_maku.py  test05_bg.py  test05_pop.py  test06_oni.py  test07_cafe.py  test07_main.py  test07_oni.py  test07_virus.py  test08_bg.py  test08_pop.py  test09_cafe.py  test09_oni.py  test09_pop.py  test09_virus.py  test10_cache_layer.py  test10_maku.py  test11_oni.py  test12_lambda_move.py  test12_lambda_scale.py  (+82 more)
(+104 files in other folders)
