[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scriptvedit"
dynamic = ["version"]
description = "スクリプトベースの動画編集ライブラリ"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "kojima8924"}
]
keywords = ["video", "editing", "script", "ffmpeg"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
]

dependencies = []

[project.optional-dependencies]
gui = ["PySide6"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
scriptvedit = "scriptvedit.cli:main"

[project.urls]
Homepage = "https://github.com/kojima8924/scriptvedit"
Repository = "https://github.com/kojima8924/scriptvedit"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "scriptvedit.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
